--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Neonderthaw&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+*,
+*::after,
+*::before{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body{
+  scroll-behavior: smooth;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  scroll-behavior: smooth;
+  font-family: 'Poppins', sans-serif;
+}
+code{
+  font-family: 'Poppins', sans-serif;
+  
+}
+/* font-family: 'Neonderthaw', cursive; */
+.header-style svg{
+  fill: white !important;
+  stroke: white !important;
+}
+.bottom-scroll-button{
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.bottom-scroll-button .scroll-icon{
+  position: absolute;
+  top: -100px;
+  animation: scroll-bottom-animation 2s infinite;
+}
+.bottom-scroll-button .scroll-text{
+  position: absolute;
+  bottom: 0;
+}
+@keyframes scroll-bottom-animation{
+  0%{
+    top: -100px;
+    opacity: 1;
+    visibility: visible;
+  }
+  30%{
+    opacity: 1;
+    visibility: visible;
+    @apply text-gray-700;
+  }
+  80%{
+    top: -60px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  100%{
+    top: -100px;
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.connect-button{
+  color: #999;
+  border: 2px solid #999;
+  padding: 0.7rem 1rem;
+  border-radius: 0.4rem;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  transition: 0.5s linear;
+}
+.connect-button:hover{
+   color: #78f701;
+   border-color: #78f701;
+}
+.connect-button .icon{
+  padding-right: 10px;
+  border-right: 2px solid #999;
+  font-size: 1.4rem;
+  transition: 0.5s linear;
+}
+.connect-button:hover .icon{
+  border-color: #78f701;
 }
